image board displayed

--- a/image_board.html
+++ b/image_board.html
@@ -91,7 +91,7 @@
     width: 130px;
     height: 130px;
     display: inline-block;
-    background: red;
+    background: #c6b52d;
     /*background-color: red; 
     display: inline-block;*/
 /*    visibility: hidden; 
@@ -115,53 +115,103 @@
   </div>
   <div class="row"> 
     <div class="column">
-      <div class="img_wrapper">
-        <img class="hoverable_img" src="imgs/im0.jpg" id="im0" onclick="updateImageColor(this.id)">
+      <div class="img_wrapper" id="im_w00">
+        <img class="hoverable_img" src="imgs/im0.jpg" id="im00" onclick="updateImageColor(this.id)">
       </div>
-      <img class="hoverable_img" src="imgs/im1.jpg" id="im1" onclick="updateImageColor(this.id)">
-      <img class="hoverable_img" src="imgs/im2.jpg" id="im2" onclick="updateImageColor(this.id)">
-      <img class="hoverable_img" src="imgs/im3.jpg" id="im3" onclick="updateImageColor(this.id)">
-      <img class="hoverable_img" src="imgs/im4.jpg" id="im4" onclick="updateImageColor(this.id)">
+      <div class="img_wrapper" id="im_w01">
+        <img class="hoverable_img" src="imgs/im1.jpg" id="im01" onclick="updateImageColor(this.id)">
+      </div>
+      <div class="img_wrapper" id="im_w02">
+        <img class="hoverable_img" src="imgs/im2.jpg" id="im02" onclick="updateImageColor(this.id)">
+      </div>
+      <div class="img_wrapper" id="im_w03">
+        <img class="hoverable_img" src="imgs/im3.jpg" id="im03" onclick="updateImageColor(this.id)">
+      </div>
+      <div class="img_wrapper" id="im_w04">
+        <img class="hoverable_img" src="imgs/im4.jpg" id="im04" onclick="updateImageColor(this.id)">
+      </div>
     </div>
   </div>
   <div class="row"> 
     <div class="column">
-      <img src="imgs/im5.jpg" id="im5">
-      <img src="imgs/im6.jpg" id="im6">
-      <img src="imgs/im7.jpg" id="im7">
-      <img src="imgs/im8.jpg" id="im8">
-      <img src="imgs/im9.jpg" id="im9">
+      <div class="img_wrapper" id="im_w10">
+        <img class="hoverable_img" src="imgs/im5.jpg" id="im10" onclick="updateImageColor(this.id)">
+      </div>
+      <div class="img_wrapper" id="im_w11">
+        <img class="hoverable_img" src="imgs/im6.jpg" id="im11" onclick="updateImageColor(this.id)">
+      </div>
+      <div class="img_wrapper" id="im_w12">
+        <img class="hoverable_img" src="imgs/im7.jpg" id="im12" onclick="updateImageColor(this.id)">
+      </div>
+      <div class="img_wrapper" id="im_w13">
+        <img class="hoverable_img" src="imgs/im8.jpg" id="im13" onclick="updateImageColor(this.id)">
+      </div>
+      <div class="img_wrapper" id="im_w14">
+        <img class="hoverable_img" src="imgs/im9.jpg" id="im14" onclick="updateImageColor(this.id)">
+      </div>
     </div>
   </div>
   <div class="row"> 
     <div class="column">
-      <img src="imgs/im10.jpg" id="im10">
-      <img src="imgs/im11.jpg" id="im11">
-      <img src="imgs/im12.jpg" id="im12">
-      <img src="imgs/im13.jpg" id="im13">
-      <img src="imgs/im14.jpg" id="im14">
+      <div class="img_wrapper" id="im_w20">
+        <img class="hoverable_img" src="imgs/im10.jpg" id="im20" onclick="updateImageColor(this.id)">
+      </div>
+      <div class="img_wrapper" id="im_w21">
+        <img class="hoverable_img" src="imgs/im11.jpg" id="im21" onclick="updateImageColor(this.id)">
+      </div>
+      <div class="img_wrapper" id="im_w22">
+        <img class="hoverable_img" src="imgs/im12.jpg" id="im22" onclick="updateImageColor(this.id)">
+      </div>
+      <div class="img_wrapper" id="im_w23">
+        <img class="hoverable_img" src="imgs/im13.jpg" id="im23" onclick="updateImageColor(this.id)">
+      </div>
+      <div class="img_wrapper" id="im_w24">
+        <img class="hoverable_img" src="imgs/im14.jpg" id="im24" onclick="updateImageColor(this.id)">
+      </div>
     </div>
   </div>
   <div class="row"> 
     <div class="column">
-      <img src="imgs/im15.jpg" id="im15">
-      <img src="imgs/im16.jpg" id="im16">
-      <img src="imgs/im17.jpg" id="im17">
-      <img src="imgs/im18.jpg" id="im18">
-      <img src="imgs/im19.jpg" id="im19">
+      <div class="img_wrapper" id="im_w30">
+        <img class="hoverable_img" src="imgs/im15.jpg" id="im30" onclick="updateImageColor(this.id)">
+      </div>
+      <div class="img_wrapper" id="im_w31">
+        <img class="hoverable_img" src="imgs/im16.jpg" id="im31" onclick="updateImageColor(this.id)">
+      </div>
+      <div class="img_wrapper" id="im_w32">
+        <img class="hoverable_img" src="imgs/im17.jpg" id="im32" onclick="updateImageColor(this.id)">
+      </div>
+      <div class="img_wrapper" id="im_w33">
+        <img class="hoverable_img" src="imgs/im18.jpg" id="im33" onclick="updateImageColor(this.id)">
+      </div>
+      <div class="img_wrapper" id="im_w34">
+        <img class="hoverable_img" src="imgs/im19.jpg" id="im34" onclick="updateImageColor(this.id)">
+      </div>
     </div>
   </div>
   <div class="row"> 
     <div class="column">
-      <img src="imgs/im20.jpg" id="im20">
-      <img src="imgs/im21.jpg" id="im21">
-      <img src="imgs/im22.jpg" id="im22">
-      <img src="imgs/im23.jpg" id="im23">
-      <img src="imgs/im24.jpg" id="im24">
+      <div class="img_wrapper" id="im_w40">
+        <img class="hoverable_img" src="imgs/im20.jpg" id="im40" onclick="updateImageColor(this.id)">
+      </div>
+      <div class="img_wrapper" id="im_w41">
+        <img class="hoverable_img" src="imgs/im21.jpg" id="im41" onclick="updateImageColor(this.id)">
+      </div>
+      <div class="img_wrapper" id="im_w42">
+        <img class="hoverable_img" src="imgs/im22.jpg" id="im42" onclick="updateImageColor(this.id)">
+      </div>
+      <div class="img_wrapper" id="im_w43">
+        <img class="hoverable_img" src="imgs/im23.jpg" id="im43" onclick="updateImageColor(this.id)">
+      </div>
+      <div class="img_wrapper" id="im_w44">
+        <img class="hoverable_img" src="imgs/im24.jpg" id="im44" onclick="updateImageColor(this.id)">
+      </div>
     </div>
   </div>
   <script src="chance.js"></script>
   <script src="gameplay_logic.js"></script>
+  <script src="game_board.js"></script>
+  <script src="img_urls.js"></script>
   <script src="jquery-3.3.1.min.js"></script>
 
 </body>
