--- a/player.html
+++ b/player.html
@@ -99,7 +99,7 @@
       <button onclick="window.location = 'image_board.html'" class = "start_game_button" >guesser</button>
   </div>
   <div class="button_wrap">
-      <button onclick="window.location = 'image_board.html" class = "start_game_button" >clue-giver</button>
+      <button onclick="window.location = 'partition_board.html'" class = "start_game_button" >clue-giver</button>
   </div>
 
 </body>
