new game structure

--- a/image_board.html
+++ b/image_board.html
@@ -20,7 +20,8 @@
       </div>
     </section>
   </div>
-  <p class="vert_text"><span id="team">Blue</span> goes first!</p>
+  <p class="vert_text"><span id="team"></span> goes first!</p>
+  <p class="key_wrap">game key: <span id="key_text"></p>
   <div class="row"> 
     <div class="column">
       <div class="img_wrapper" id="im_w00">
@@ -129,6 +130,7 @@
   <script src="chance.js"></script>
   <script src="gameplay_logic.js"></script>
   <script src="game_board.js"></script>
+  <script src="page_routing.js"></script>
   <script src="img_urls.js"></script>
   <script src="jquery-3.3.1.min.js"></script>
 
