--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 /*    margin-top:150px;
 */    margin-bottom:20px;
     vertical-align: center;
-    background-color: #6b4a82;
+    background-color: #429bf4;
     border:none;
     padding: 15px;
     color: #DDD;
@@ -57,7 +57,7 @@
   }
   .start_game_button:hover
   {
-    background-color: #503860;
+    background-color: #3276ba;
   }
 
   .button_wrap
@@ -84,11 +84,13 @@
       <button onclick="setupGame()" class = "start_game_button" >start game</button>
   </div>
   <div class="button_wrap">
-      <button onclick="setupGame()" class = "start_game_button" >join game</button>
+      <button onclick="joinGame()" class = "start_game_button" >join game</button>
   </div>
   <script src="gameplay_logic.js"></script>
   <script src="game_board.js"></script>
   <script src="chance.js"></script>
+  <script src="red_keys.js"></script>
+  <script src="blue_keys.js"></script>
 
 </body>
 </html>
