--- a/player.html
+++ b/player.html
@@ -22,24 +22,6 @@
     text-decoration:none;
     color:#DDD;
   }
-  #banner
-  {
-    width:500px;
-    height:200px;
-    text-align:center;
-    background-image:url(http://i.imgur.com/MQHYB.jpg);
-    background-repeat:no-repeat;
-    border-radius:5px;
-    margin:90px auto auto;
-    padding:80px 0;
-  }
-  .lead
-  {
-    background-color:rgba(255,255,255,0.6);
-    border-radius:3px;
-    box-shadow:rgba(0,0,0,0.2) 0 1px 3px;
-    font-family:Sintony, sans-serif;
-  }
   .start_game_button
   {
     width: 900px;
@@ -112,10 +94,10 @@
     <span >join game as</span>
   </div>
   <div class="button_wrap">
-      <button onclick="goToImageBoard()" class = "start_game_button" >guesser</button>
+      <button onclick="playerRouter('image_board.html')" class = "start_game_button" >guesser</button>
   </div>
   <div class="button_wrap">
-      <button onclick="goToPartitionBoard()" class = "start_game_button" >clue-giver</button>
+      <button onclick="playerRouter('partition_board.html')" class = "start_game_button" >clue-giver</button>
   </div>
   <script src="page_routing.js"></script>
   <script src="gameplay_logic.js"></script>
