--- a/join_game.html
+++ b/join_game.html
@@ -108,10 +108,10 @@
     <span >join game as</span>
   </div>
   <div class="button_wrap">
-      <button onclick="join_goToImageBoard()" class = "start_game_button" >guesser</button>
+      <button onclick="joinRouter('image_board.html')" class = "start_game_button" >guesser</button>
   </div>
   <div class="button_wrap">
-      <button onclick="join_goToPartitionBoard()" class = "start_game_button" >clue-giver</button>
+      <button onclick="joinRouter('partition_board.html')" class = "start_game_button" >clue-giver</button>
   </div>
   <div class="div_wrapper" id="joinas" style="color:white">
     <span id = "warning" style="margin-top:100px"></span>
