--- a/image_board.html
+++ b/image_board.html
@@ -6,7 +6,7 @@
 
   <link href='http://fonts.googleapis.com/css?family=Sintony:400,700' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Actor' rel='stylesheet'>
-   <link href="image_board.css" rel="stylesheet">
+   <link href="styles/image_board.css" rel="stylesheet">
   <style type="text/css">    
   
 
@@ -127,11 +127,11 @@
     </div>
   </div>
   
-  <script src="chance.js"></script>
-  <script src="gameplay_logic.js"></script>
-  <script src="page_routing.js"></script>
-  <script src="img_urls.js"></script>
-  <script src="jquery-3.3.1.min.js"></script>
+  <script src="js/chance.js"></script>
+  <script src="js/gameplay_logic.js"></script>
+  <script src="js/page_routing.js"></script>
+  <script src="js/img_urls.js"></script>
+  <script src="js/jquery-3.3.1.min.js"></script>
 
 </body>
 </html>
