--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
   <div class="button_wrap">
       <button onclick="joinGame()" class = "start_game_button" >join game</button>
   </div>
-  <script src="gameplay_logic.js"></script>
-  <script src="chance.js"></script>
-  <script src="red_keys.js"></script>
-  <script src="blue_keys.js"></script>
+  <script src="js/gameplay_logic.js"></script>
+  <script src="js/chance.js"></script>
+  <script src="js/red_keys.js"></script>
+  <script src="js/blue_keys.js"></script>
 
 </body>
 </html>
