--- a/join_game.html
+++ b/join_game.html
@@ -116,10 +116,10 @@
   <div class="div_wrapper" id="joinas" style="color:white">
     <span id = "warning" style="margin-top:100px"></span>
   </div>
-  <script src="page_routing.js"></script>
-  <script src="gameplay_logic.js"></script>
-  <script src="red_keys.js"></script>
-  <script src="blue_keys.js"></script>
+  <script src="js/page_routing.js"></script>
+  <script src="js/gameplay_logic.js"></script>
+  <script src="js/red_keys.js"></script>
+  <script src="js/blue_keys.js"></script>
 
 </body>
 </html>
