--- a/partition_board.html
+++ b/partition_board.html
@@ -77,11 +77,11 @@
     </div>
   </div>
   
-  <script src="chance.js"></script>
-  <script src="gameplay_logic.js"></script>
-  <script src="page_routing.js"></script>
-  <script src="img_urls.js"></script>
-  <script src="jquery-3.3.1.min.js"></script>
+  <script src="js/chance.js"></script>
+  <script src="js/gameplay_logic.js"></script>
+  <script src="js/page_routing.js"></script>
+  <script src="js/img_urls.js"></script>
+  <script src="js/jquery-3.3.1.min.js"></script>
 
 </body>
 </html>
