--- a/player.html
+++ b/player.html
@@ -99,8 +99,8 @@
   <div class="button_wrap">
       <button onclick="playerRouter('partition_board.html')" class = "start_game_button" >clue-giver</button>
   </div>
-  <script src="page_routing.js"></script>
-  <script src="gameplay_logic.js"></script>
+  <script src="js/page_routing.js"></script>
+  <script src="js/gameplay_logic.js"></script>
 
 </body>
 </html>
