adding imgs and preventing early color reveal

--- a/image_board.html
+++ b/image_board.html
@@ -8,6 +8,7 @@
   <link href='https://fonts.googleapis.com/css?family=Actor' rel='stylesheet'>
   <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
   <link href="styles/image_board.css" rel="stylesheet">
+  <link href="styles/sharedStyles.css" rel="stylesheet">
   <style type="text/css">    
   
 
@@ -21,9 +22,10 @@
       </div>
     </section>
   </div>
-  <!-- <p class="vert_text"><span id="team"></span> goes first!</p> -->
-  <p class="key_wrap">game key: <span id="key_text"></p>
-  <p class="t_wrap"><span id="team"></span> goes first!</p>
+  <div class="game_info_wrap">
+    <p class="key_wrap">game key: <span id="key_text"></p>
+    <p class="t_wrap"><span id="team"></span> goes first!</p>
+  </div>
   <div class="row"> 
     <div class="column">
       <div class="img_wrapper" id="im_w00">
