better end game ui

--- a/image_board.html
+++ b/image_board.html
@@ -18,7 +18,7 @@
   <div class="container-fluid p-0" align="center">
     <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
       <div class="my-auto">
-        <h1 class="mb-0">keyword</h1>
+        <h1 class="mb-0" style="margin-bottom:2.5%; font-size:15px;">keyword</h1>
       </div>
     </section>
   </div>
@@ -127,7 +127,7 @@
       <div>
       <p class="modal_title">GAME OVER</p> 
       <p id="modal_sub">You selected the bomb</p>
-      <p class="play_again">Want to <button onclick="setupGame()" class="play_again_btn">play again?</button></p> 
+      <p class="play_again">Want to <button onclick="setupGame()" class="play_again_btn">start a new game?</button> or <button onclick="window.location = 'join_game.html'" class="play_again_btn">join a new game?</button></p>
     </div>
     </div>
   </div>
